# pox

./: .gitignore  .pdm.toml  CHANGELOG.md  README.md  package-lock.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: tests.yml
pox/: __init__.py  base.py  datastructures.py  plural_parser.py  plurals.py  spreadsheet.py  styles.py  test_plural_parser.py  utils.py  warnings.py
pox/cli/: __init__.py  main.py  pox_convert.py  xop_convert.py
pox/contrib/: __init__.py
pox/contrib/django/: __init__.py
pox/contrib/django/pox/: __init__.py
pox/contrib/django/pox/management/commands/: __init__.py  makemessages_nofuzzy.py
tests/: __init__.py  conftest.py  test_base.py  test_plural_parser.py  test_pox.py  test_xop.py  tests.py
tests/fixtures/: demo.po  fuzzy.po  mixed_empty.po  no_language.po  obsolete.po  plural_empty.po  plurals.po  plurals_arabic.po  plurals_polish.po  singular.po
