[project]
name = "pox"
version = "0.1"
description = "Convert PO files to Excel Spreadsheets and back."
authors = [
    {name = "Martin Mahner", email = "martin@elephant.house"},
]
dependencies = [
    "polib>=1.2.0",     # To read and write .po files
    "openpyxl>=3.1.1",  # To read and write .xlsx files
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "django>=4.1.7",
    "pytest>=7.2.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "ipdb>=0.13.11",
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
"pox-convert" = "pox.cli.pox_convert:main"
"xop-convert" = "pox.cli.xop_convert:main"

[tool.ruff]
target-version = "py311"
lint.select = ["ALL"]
lint.ignore = [
    # Valid exclusions.
    "COM812", # Conflicts with ruff format
    "E501", # Line too long (>88)
    "D203", # incorrect-blank-line-before-class (conflicts with D211)
    "D212", # Don't require summary on first line
    "ERA001", # Found commented-out code
    "FBT", # Flake Boolean Trap (don't use arg=True in functions)
    "FIX", # Line contains TODO/FIXME. Consider resolving.
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "S101", # Use of `assert` detected"
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "SLF001", # Allow private member access in tests
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
filterwarnings = ["ignore::RuntimeWarning"]

[tool.mypy]
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.coverage.run]
omit = [
    "pox/cli/pox_convert.py",
    "pox/contrib/*",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "def main",
    "pragma: no cover",
]
