[project]
name = "pox-convert"
version = "1.0.1"
description = "Convert PO files to Excel Spreadsheets and back."
authors = [
    {name = "Martin Mahner", email = "martin@elephant.house"},
]
dependencies = [
    "polib>=1.2.0",
    "openpyxl>=3.1.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]
keywords = ["po", "gettext", "excel", "xlsx", "i18n", "l10n", "translation"]

[project.urls]
Homepage = "https://github.com/bartTC/pox"
Repository = "https://github.com/bartTC/pox"
Issues = "https://github.com/bartTC/pox/issues"

[project.scripts]
"pox-convert" = "pox.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pox"]

[dependency-groups]
dev = [
    "django>=4.1.7",
    "pytest>=7.2.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "ipdb>=0.13.11",
]

[tool.ruff]
target-version = "py311"
lint.select = ["ALL"]
lint.ignore = [
    "COM812",  # Conflicts with ruff format
    "D203",    # incorrect-blank-line-before-class (conflicts with D211)
    "D212",    # Don't require summary on first line
    "E501",    # Line too long
    "ERA001",  # Found commented-out code
    "FBT",     # Boolean trap
    "FIX",     # Line contains TODO/FIXME
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "SLF001", # Allow private member access in tests
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
filterwarnings = ["ignore::RuntimeWarning"]

[tool.mypy]
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.coverage.run]
omit = [
    "pox/cli/pox_convert.py",
    "pox/contrib/*",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "def main",
    "pragma: no cover",
]
